pretty much good

--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
       {
         "command": "extension.importJson",
         "title": "Desmos: Import Work (.json)"
+      },
+      {
+        "command": "extension.clearUnsavedWork",
+        "title": "Desmos: Clear All Unsaved Recovery Items"
       }
     ]
   },
