maybe ready to publish now?

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "desmos-graphing-calculator",
   "displayName": "Desmos Graphing Calculator",
   "version": "0.0.1",
+  "publisher": "evan-kolberg",
   "engines": {
     "vscode": "^1.70.0"
   },
