--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "desmos-graphing-calculator",
   "displayName": "Desmos Graphing Calculator",
-  "version": "0.0.2",
+  "version": "0.1.3",
   "publisher": "evan-kolberg",
   "engines": {
     "vscode": "^1.70.0"
@@ -33,7 +33,7 @@
       "desmosViewContainer": [
         {
           "id": "desmosCalcView",
-          "name": "Desmos Graphing Calculator",
+          "name": "Graphing Calculator",
           "icon": "./desmos-activity-bar.png"
         }
       ]
@@ -42,6 +42,10 @@
       {
         "command": "extension.openDesmos",
         "title": "Desmos: Open Desmos (v1.10.1)"
+      },
+      {
+        "command": "extension.openDesmosPrerelease",
+        "title": "Desmos: Open Desmos (v1.11-prerelease)"
       },
       {
         "command": "extension.exportJson",
